--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
+        "google/apiclient": "2.12.1",
         "laravel/framework": "^8.54",
         "league/flysystem-aws-s3-v3": "^1.0",
         "tymon/jwt-auth": "^1.0"
