New model. Polished.

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,7 @@ AWS_SECRET_ACCESS_KEY=                  ## AMAZON WEB SERVICES SECRET ACCESS KEY
 AWS_DEFAULT_REGION=us-east-1            ## AMAZON WEB SERVICES REGION
 AWS_BUCKET=                             ## AMAZON WEB SERVICES BUCKET NAME
 
+GOOGLE_CLIENT_ID=                       ## GOOGLE API ID
+GOOGLE_CLIENT_SECRET=                   ## GOOGLE API SECRET
+
 JWT_SECRET=                             ## INSERT JWT SECRET KEY ( php artisan jwt:secret )
